XW-1575 | Fix z-indexes on VE

--- a/skins/oasis/css/core/breakpoints-background.scss
+++ b/skins/oasis/css/core/breakpoints-background.scss
@@ -157,6 +157,10 @@ body.skin-oasis {
 				display: none;
 			}
 		}
+
+		&.ve .WikiaPage {
+			z-index: 2;
+		}
 	}
 
 	@media #{$breakpoint-small-only} {
